--- a/app/src/main/res/layout/activity_bot_main.xml
+++ b/app/src/main/res/layout/activity_bot_main.xml
@@ -54,7 +54,7 @@
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/poppins_semi_bold"
         android:text="Agri Guru"
-        android:textColor="#2E976A"
+        android:textColor="@color/greenappall"
         android:textSize="40dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
@@ -92,7 +92,7 @@
             android:id="@+id/sendButton"
             android:layout_width="76dp"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/mailbend"
+            app:srcCompat="@drawable/mailsend"
             tools:layout_editor_absoluteX="261dp"
             tools:layout_editor_absoluteY="576dp" />
 
