--- a/app/src/main/res/layout/activity_farmer_proposal_list.xml
+++ b/app/src/main/res/layout/activity_farmer_proposal_list.xml
@@ -38,7 +38,7 @@
                 android:layout_width="163dp"
                 android:layout_height="40dp"
                 android:text="My Proposal"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/green"
                 android:textSize="26sp"
                 android:textStyle="bold"
 
