--- a/app/src/main/res/layout/activity_proposal_add.xml
+++ b/app/src/main/res/layout/activity_proposal_add.xml
@@ -37,7 +37,7 @@
                 android:layout_width="163dp"
                 android:layout_height="40dp"
                 android:text="Add Proposal"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/green"
                 android:textSize="26sp"
                 android:textStyle="bold"
 
