--- a/app/src/main/res/layout/post_card_item.xml
+++ b/app/src/main/res/layout/post_card_item.xml
@@ -13,7 +13,7 @@
 
         <TextView
             android:id="@+id/pAmount"
-            android:layout_width="128dp"
+            android:layout_width="wrap_content"
             android:layout_height="32dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="74dp"
