--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,6 @@
         <color name="colorText">#228D4C</color>
         <color name="colorButtonBackground">#FF5722</color>
         <color name="BtnColour">#228D4C</color>
-        <color name="colorPrimary">#228D4C</color>
+        <color name="green">#228D4C</color>
 
 </resources>
