--- a/app/src/main/res/layout/activity_investor_post_view.xml
+++ b/app/src/main/res/layout/activity_investor_post_view.xml
@@ -78,10 +78,10 @@
                 android:layout_marginTop="17dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/a"
+                android:src="@drawable/samplepro"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView8"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/avatars" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/imageView8"
@@ -106,6 +106,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/propsalimage"
+            />
 
     </LinearLayout>
 
