--- a/app/src/main/res/layout/bottomsheet.xml
+++ b/app/src/main/res/layout/bottomsheet.xml
@@ -4,141 +4,290 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:weightSum="3"
-    android:padding="16dp">
-    <LinearLayout
+    android:orientation="vertical">
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="1">
+        android:backgroundTint="#E5E4E4">
 
-        <TextView
-            android:layout_width="170dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Filter Projects">
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:weightSum="3">
 
-        </TextView>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="2"
-        android:layout_weight="1">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView8"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:text="Location" />
+                android:layout_height="match_parent"
+                android:layout_weight="1"
 
-            <TextView
-                android:id="@+id/textView9"
+                android:orientation="vertical">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+                    <TextView
+                        android:layout_width="203dp"
+                        android:layout_height="42dp"
+                        android:fontFamily="@font/poppinsbold"
+                        android:text="Filter  Projects"
+                        android:textColor="@color/greenappall"
+                        android:textSize="24dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                    </TextView>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="31dp"
-                android:text="Type" />
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:weightSum="2">
 
-            <TextView
-                android:id="@+id/textView11"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="#AAA5A5" />
+
+                    <TextView
+                        android:id="@+id/textView8"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:backgroundTint="#A8A1A1"
+                        android:fontFamily="@font/poppins_semi_bold"
+                        android:paddingLeft="10dp"
+                        android:text="Location"
+                        android:textColor="@color/black"
+                        android:textSize="18dp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="#AAA5A5" />
+
+
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:fontFamily="@font/poppins_semi_bold"
+                        android:paddingLeft="10dp"
+                        android:text="Type"
+                        android:textColor="@color/black"
+                        android:textSize="18dp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="#AAA5A5" />
+
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:fontFamily="@font/poppins_semi_bold"
+                        android:paddingLeft="10dp"
+                        android:text="Farmer Level"
+                        android:textColor="@color/black"
+                        android:textSize="18dp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="#AAA5A5" />
+
+
+                    <TextView
+                        android:id="@+id/textView12"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:fontFamily="@font/poppins_semi_bold"
+                        android:paddingLeft="10dp"
+                        android:text="Min"
+                        android:textColor="@color/black"
+                        android:textSize="18dp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="#AAA5A5" />
+
+
+                    <TextView
+                        android:id="@+id/textView13"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:fontFamily="@font/poppins_semi_bold"
+                        android:paddingLeft="10dp"
+                        android:text="Max"
+                        android:textColor="@color/black"
+                        android:textSize="18dp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="#AAA5A5" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="#AAA5A5" />
+
+                    <Spinner
+                        android:id="@+id/locationSpinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:entries="@array/Location_spinner_values"
+                        android:hint="Select Location"
+                        android:scrollbarSize="5dp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="#AAA5A5" />
+
+
+                    <Spinner
+                        android:id="@+id/TypeSpinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:entries="@array/Type_spinner_values"
+
+                        android:hint="Select Farmer Level" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="#AAA5A5" />
+
+
+                    <Spinner
+                        android:id="@+id/farmerLevelSpinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:entries="@array/level_spinner_values"
+
+                        android:hint="Select Farmer Level" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="#AAA5A5" />
+
+
+                    <EditText
+                        android:id="@+id/editTextText"
+                        android:layout_width="150dp"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="20dp"
+                        android:background="@drawable/bottom_outline"
+                        android:ems="10"
+                        android:inputType="number" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="#AAA5A5" />
+
+
+                    <EditText
+                        android:id="@+id/editTextText3"
+                        android:layout_width="150dp"
+                        android:layout_height="41dp"
+                        android:layout_marginStart="20dp"
+                        android:background="@drawable/bottom_outline"
+                        android:ems="10"
+                        android:inputType="number" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="#AAA5A5" />
+
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:text="Farmer Level" />
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/textView12"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:text="Min" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/textView13"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:text="Max" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-            <Spinner
-                android:id="@+id/locationSpinner"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:hint="Select Location"
-                android:entries="@array/Location_spinner_values"
-                />
+                    <Button
+                        android:id="@+id/clearbuttonfilter"
+                        android:layout_width="120dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="end"
+                        android:layout_marginStart="50dp"
+                        android:backgroundTint="@color/greenappall"
+                        android:fontFamily="@font/poppins_semi_bold"
+                        android:text="Clear"
+                        android:textColor="@color/white"
+                        android:textSize="16dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-            <Spinner
-                android:id="@+id/TypeSpinner"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:entries="@array/Type_spinner_values"
-
-                android:hint="Select Farmer Level" />
-
-            <Spinner
-                android:id="@+id/farmerLevelSpinner"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:entries="@array/level_spinner_values"
-
-                android:hint="Select Farmer Level"
-                />
-
-            <EditText
-                android:id="@+id/editTextText"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:ems="10"
-                android:inputType="text"
-                android:text="Name" />
-
-            <EditText
-                android:id="@+id/editTextText3"
-                android:layout_width="match_parent"
-                android:layout_height="40dp
+                    <Button
+                        android:id="@+id/showbuttonfilter"
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="92dp"
+                        android:layout_marginEnd="50dp"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/greenappall"
+                        android:fontFamily="@font/poppins_semi_bold"
+                        android:text="Show
 "
-                android:ems="10"
-                android:inputType="text"
-                android:text="Name" />
+                        android:textColor="@color/white"
+                        android:textSize="16dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/clearbuttonfilter"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+                <!-- Add a button to apply filters -->
+
+
+            </LinearLayout>
+
+
         </LinearLayout>
-    </LinearLayout>
-
-
-
-
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:layout_weight="1">
-
-       <!-- Add a button to apply filters -->
-
-       <Button
-           android:id="@+id/clearbuttonfilter"
-           android:layout_width="184dp"
-           android:layout_height="match_parent"
-           android:layout_gravity="end"
-           android:text="Clear" />
-
-       <Button
-           android:id="@+id/showbuttonfilter"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_weight="1"
-           android:text="Show
-" />
-   </LinearLayout>
-
-
-
+    </androidx.cardview.widget.CardView>
 
 
 </LinearLayout>
+
+
