--- a/app/src/main/res/layout/post_card_item.xml
+++ b/app/src/main/res/layout/post_card_item.xml
@@ -3,149 +3,175 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="270dp"
-    android:background="#D3D2D2"
-    android:layout_marginBottom="5dp">
+    android:layout_height="275dp"
+    android:layout_marginBottom="10dp"
+   >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="275dp"
+        android:backgroundTint="#E5E4E4"
+        app:cardCornerRadius="20dp"
+        app:contentPadding="5dp">
 
-        <TextView
-            android:id="@+id/pAmount"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="74dp"
-            android:fontFamily="@font/poppins_black"
-            android:text="Rs. 100500.00"
-            android:textSize="18dp"
-            app:layout_constraintEnd_toStartOf="@+id/pProjectImage"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pProfit" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/pProfit"
-            android:layout_width="128dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="74dp"
-            android:fontFamily="@font/poppins_semi_bold"
-            android:text="Profit -40%"
-            android:textColor="#E6AC33"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/pProjectImage"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pLocation" />
+            <TextView
+                android:id="@+id/pAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="74dp"
+                android:fontFamily="@font/poppins_black"
+                android:text="Rs. 100500.00"
+                android:textSize="18dp"
+                app:layout_constraintEnd_toStartOf="@+id/pProjectImage"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/pProfit" />
 
-        <TextView
-            android:id="@+id/pLocation"
-            android:layout_width="128dp"
-            android:layout_height="18dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="74dp"
-            android:fontFamily="@font/regular"
-            android:text="Nuwara Eliya"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/pProjectImage"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pProjectName" />
+            <TextView
+                android:id="@+id/pProfit"
+                android:layout_width="128dp"
+                android:layout_height="32dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="74dp"
+                android:fontFamily="@font/poppins_semi_bold"
+                android:text="Profit -40%"
+                android:textColor="#E6AC33"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/pProjectImage"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/pLocation" />
 
-        <TextView
-            android:id="@+id/pProjectName"
-            android:layout_width="174dp"
-            android:layout_height="26dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="28dp"
-            android:fontFamily="@font/poppins_black"
-            android:text="Green Chilly"
-            android:textSize="18dp"
-            app:layout_constraintEnd_toStartOf="@+id/pProjectImage"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pFarmerLeve" />
+            <TextView
+                android:id="@+id/pLocation"
+                android:layout_width="128dp"
+                android:layout_height="18dp"
+                android:layout_marginStart="18dp"
+                android:layout_marginEnd="74dp"
+                android:fontFamily="@font/regular"
+                android:text="Nuwara Eliya"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/pProjectImage"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/pProjectName" />
 
-        <TextView
-            android:id="@+id/pFarmerLeve"
-            android:layout_width="122dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="8dp"
-            android:fontFamily="@font/poppins_black"
-            android:text="Level 4"
-            android:textColor="@color/greenappall"
-            android:textSize="24dp"
-            app:layout_constraintEnd_toStartOf="@+id/pProjectImage"
-            app:layout_constraintStart_toEndOf="@+id/pUserImage"
-            app:layout_constraintTop_toBottomOf="@+id/pUserName" />
+            <TextView
+                android:id="@+id/pProjectName"
+                android:layout_width="174dp"
+                android:layout_height="26dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/poppins_black"
+                android:text="Green Chilly"
+                android:textSize="18dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/pFarmerLeve" />
 
-        <ImageView
-            android:id="@+id/pUserImage"
-            android:layout_width="86dp"
-            android:layout_height="56dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginEnd="8dp"
-            android:background="@drawable/a"
-            app:layout_constraintEnd_toStartOf="@+id/pFarmerLeve"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars" />
+            <TextView
+                android:id="@+id/pFarmerLeve"
+                android:layout_width="94dp"
+                android:layout_height="37dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="25dp"
+                android:backgroundTint="@color/greenappall"
+                android:fontFamily="@font/poppins_black"
+                android:text="Level 4"
+                android:textColor="#228C4C"
+                android:textSize="24dp"
+                app:layout_constraintEnd_toStartOf="@+id/cardView3"
+                app:layout_constraintStart_toEndOf="@+id/cardView2"
+                app:layout_constraintTop_toBottomOf="@+id/pUserName" />
 
-        <TextView
-            android:id="@+id/pUserName"
-            android:layout_width="127dp"
-            android:layout_height="22dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginEnd="51dp"
-            android:fontFamily="@font/regular"
-            android:text="Saman Silva"
-            android:textSize="15dp"
-            app:layout_constraintEnd_toStartOf="@+id/pPostedDate"
-            app:layout_constraintStart_toEndOf="@+id/pUserImage"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/pUserName"
+                android:layout_width="111dp"
+                android:layout_height="23dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="147dp"
+                android:fontFamily="@font/regular"
+                android:text="Saman Silva"
+                android:textSize="17dp"
+                app:layout_constraintEnd_toStartOf="@+id/pPostedDate"
+                app:layout_constraintStart_toEndOf="@+id/cardView2"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/pPostedDate"
-            android:layout_width="108dp"
-            android:layout_height="22dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginEnd="33dp"
-            android:fontFamily="@font/poppins_light"
-            android:text="21 nov 2023"
-            android:textSize="10dp"
-            app:layout_constraintBottom_toTopOf="@+id/pProjectImage"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/pPostedDate"
+                android:layout_width="58dp"
+                android:layout_height="21dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="5dp"
+                android:fontFamily="@font/poppins_light"
+                android:text="21 nov 2023"
+                android:textSize="10dp"
+                app:layout_constraintBottom_toTopOf="@+id/cardView3"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/pProjectImage"
-            android:layout_width="184dp"
-            android:layout_height="185dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="9dp"
-            app:layout_constraintBottom_toTopOf="@+id/pViewButton"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pUserName"
-            tools:srcCompat="@tools:sample/avatars" />
+            <Button
+                android:id="@+id/pViewButton"
+                android:layout_width="339dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="56dp"
+                android:layout_marginEnd="60dp"
+                android:layout_marginBottom="2dp"
+                android:backgroundTint="@color/greenappall"
+                android:fontFamily="@font/poppins_semi_bold"
+                android:text="View More"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/pViewButton"
-            android:layout_width="295dp"
-            android:layout_height="46dp"
-            android:layout_marginStart="56dp"
-            android:layout_marginEnd="60dp"
-            android:layout_marginBottom="2dp"
-            android:backgroundTint="@color/greenappall"
-            android:fontFamily="@font/poppins_semi_bold"
-            android:text="View More"
-            android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView2"
+                android:layout_width="57dp"
+                android:layout_height="52dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="4dp"
+                android:backgroundTint="#E81C1C"
+                app:cardCornerRadius="24dp"
+                app:layout_constraintEnd_toStartOf="@+id/pUserName"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/pUserImage"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    tools:srcCompat="@tools:sample/avatars" />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView3"
+                android:layout_width="185dp"
+                android:layout_height="185dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="16dp"
+                app:cardCornerRadius="10dp"
+                app:layout_constraintBottom_toTopOf="@+id/pViewButton"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/pProjectName"
+                app:layout_constraintTop_toBottomOf="@+id/pPostedDate">
+
+                <ImageView
+                    android:id="@+id/pProjectImage"
+                    android:layout_width="184dp"
+                    android:layout_height="185dp"
+                    tools:srcCompat="@tools:sample/avatars" />
+            </androidx.cardview.widget.CardView>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
