--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,14 @@
         <item name="android:textColor">@android:color/black</item>
     </style>
 
+    <!-- Custom style for AlertDialog buttons -->
+    <style name="CustomAlertDialogButton">
+        <!-- Style for the "Submit" button -->
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/greenappall</item>
+
+
+    </style>
 
 
 </resources>
