--- a/app/src/main/res/layout/activity_investor_my_projects.xml
+++ b/app/src/main/res/layout/activity_investor_my_projects.xml
@@ -39,11 +39,10 @@
 
 
     <LinearLayout
+        android:id="@+id/linearLayout6"
         android:layout_width="415dp"
         android:layout_height="65dp"
-        android:layout_marginBottom="4dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerViewcin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
@@ -84,16 +83,17 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerViewcin"
         android:name="com.example.aswanna.Fragment.InvestorOngoingProjectsFragment"
-        android:layout_width="0dp"
-        android:layout_height="591dp"
+        android:layout_width="394dp"
+        android:layout_height="713dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="7dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintHorizontal_bias="0.538"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
