--- a/app/src/main/res/layout/activity_investor_post_view.xml
+++ b/app/src/main/res/layout/activity_investor_post_view.xml
@@ -366,7 +366,7 @@
                     android:layout_height="50dp"
                     android:fontFamily="@font/poppins_light"
                     android:paddingTop="10dp"
-                    android:text="Mobile No"
+                    android:text="0778596586"
                     android:textSize="15dp" />
             </LinearLayout>
         </LinearLayout>
@@ -375,12 +375,11 @@
     <LinearLayout
         android:layout_width="417dp"
         android:layout_height="90dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginBottom="5dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
+        app:layout_constraintStart_toStartOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -388,10 +387,10 @@
 
             <Button
                 android:id="@+id/button3"
-                android:layout_width="230dp"
-                android:layout_height="49dp"
+                android:layout_width="237dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="33dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
                 android:backgroundTint="@color/greenappall"
                 android:fontFamily="@font/poppins_semi_bold"
@@ -400,7 +399,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintVertical_bias="0.363" />
 
             <TextView
                 android:id="@+id/textView39"
