--- a/app/src/main/res/layout/post_card_item.xml
+++ b/app/src/main/res/layout/post_card_item.xml
@@ -80,13 +80,11 @@
                 android:layout_width="94dp"
                 android:layout_height="37dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="25dp"
                 android:backgroundTint="@color/greenappall"
                 android:fontFamily="@font/poppins_black"
                 android:text="Level 4"
                 android:textColor="#228C4C"
                 android:textSize="24dp"
-                app:layout_constraintEnd_toStartOf="@+id/cardView3"
                 app:layout_constraintStart_toEndOf="@+id/cardView2"
                 app:layout_constraintTop_toBottomOf="@+id/pUserName" />
 
@@ -113,7 +111,6 @@
                 android:fontFamily="@font/poppins_light"
                 android:text="21 nov 2023"
                 android:textSize="10dp"
-                app:layout_constraintBottom_toTopOf="@+id/cardView3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -136,7 +133,7 @@
                 android:id="@+id/cardView2"
                 android:layout_width="57dp"
                 android:layout_height="52dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="28dp"
                 android:layout_marginTop="4dp"
                 android:backgroundTint="#E81C1C"
                 app:cardCornerRadius="24dp"
@@ -152,13 +149,14 @@
                     tools:srcCompat="@tools:sample/avatars" />
             </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardView3"
+            <LinearLayout
                 android:layout_width="185dp"
                 android:layout_height="185dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="16dp"
-                app:cardCornerRadius="10dp"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginEnd="25dp"
+                android:backgroundTint="#E4E3E3"
+                android:orientation="horizontal"
                 app:layout_constraintBottom_toTopOf="@+id/pViewButton"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/pProjectName"
@@ -166,10 +164,10 @@
 
                 <ImageView
                     android:id="@+id/pProjectImage"
-                    android:layout_width="184dp"
-                    android:layout_height="185dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     tools:srcCompat="@tools:sample/avatars" />
-            </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
