--- a/app/src/main/res/layout/investor_ongoing_project_item.xml
+++ b/app/src/main/res/layout/investor_ongoing_project_item.xml
@@ -31,6 +31,7 @@
                 <LinearLayout
                     android:layout_width="244dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="15dp"
                     android:layout_weight="1">
 
 
