--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -7,12 +7,6 @@
     android:orientation="vertical"
     tools:context=".Profile_View">
 
-    <TextView
-        android:id="@+id/textView20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
     <ImageView
         android:id="@+id/profileImage"
         android:layout_width="match_parent"
@@ -22,36 +16,36 @@
     <TextView
         android:id="@+id/fullNameTextView"
         android:layout_width="match_parent"
-        android:layout_height="38dp"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/userTypeTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="40dp"
+        android:fontFamily="@font/poppinsbold"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="16dp" />
 
     <TextView
         android:id="@+id/emailTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="40dp"
+        android:fontFamily="@font/poppinsbold"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="16dp" />
 
     <TextView
         android:id="@+id/phoneNoTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/levelTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="40dp"
+        android:fontFamily="@font/poppinsbold"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="16dp" />
 
     <TextView
         android:id="@+id/countTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="40dp"
+        android:fontFamily="@font/poppinsbold"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="16dp" />
 </LinearLayout>
