--- a/app/src/main/res/layout/investorcompletedprojects.xml
+++ b/app/src/main/res/layout/investorcompletedprojects.xml
@@ -10,8 +10,10 @@
         android:layout_width="128dp"
         android:layout_height="147dp"
         android:layout_marginStart="4dp"
+        android:layout_marginEnd="13dp"
         android:layout_marginBottom="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/projectName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -20,12 +22,11 @@
         android:id="@+id/projectName"
         android:layout_width="249dp"
         android:layout_height="36dp"
-        android:layout_marginStart="13dp"
         android:layout_marginEnd="17dp"
         android:fontFamily="@font/poppins_semi_bold"
         android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/textView15"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView19"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -45,10 +46,11 @@
         android:id="@+id/textView15"
         android:layout_width="74dp"
         android:layout_height="26dp"
-        android:layout_marginStart="13dp"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="48dp"
         android:fontFamily="@font/regular"
         android:text="Farmer"
+        app:layout_constraintBottom_toTopOf="@+id/textView16"
         app:layout_constraintEnd_toStartOf="@+id/textView14"
         app:layout_constraintStart_toEndOf="@+id/imageView19"
         app:layout_constraintTop_toBottomOf="@+id/projectName" />
@@ -57,10 +59,11 @@
         android:id="@+id/textView16"
         android:layout_width="71dp"
         android:layout_height="29dp"
-        android:layout_marginStart="13dp"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="51dp"
         android:fontFamily="@font/regular"
         android:text="Start Date"
+        app:layout_constraintBottom_toTopOf="@+id/textView17"
         app:layout_constraintEnd_toStartOf="@+id/textView14"
         app:layout_constraintStart_toEndOf="@+id/imageView19"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
@@ -82,10 +85,12 @@
         android:id="@+id/textView17"
         android:layout_width="72dp"
         android:layout_height="29dp"
-        android:layout_marginStart="13dp"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="49dp"
+        android:layout_marginBottom="11dp"
         android:fontFamily="@font/regular"
         android:text="End Date"
+        app:layout_constraintBottom_toTopOf="@+id/feedbutton"
         app:layout_constraintEnd_toStartOf="@+id/textView26"
         app:layout_constraintStart_toEndOf="@+id/imageView19"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
